--- a/slides/Intro-1-2-3.Rmd
+++ b/slides/Intro-1-2-3.Rmd
@@ -6,6 +6,7 @@ institute: ""
 date: ""
 output:
   xaringan::moon_reader:
+    css: xaringan-themer.css
     lib_dir: libs
     nature:
       highlightStyle: github
@@ -16,7 +17,23 @@ output:
 
 
 ```{r setup, include=FALSE}
+library(xaringanthemer)
 options(htmltools.dir.version = FALSE)
+
+purduegold <- '#CEB888'
+colorscheme <- purduegold
+```
+
+```{r xaringan-themer, include=FALSE, warning=FALSE}
+library(xaringanthemer)
+style_duo_accent(
+  #base_color = purduegold,
+  primary_color = colorscheme,
+  secondary_color = "black",
+  header_font_google = google_font("Josefin Sans"),
+  text_font_google   = google_font("Montserrat", "300", "300i"),
+  code_font_google   = google_font("Fira Mono")
+)
 ```
 
 
