--- a/slides/Intro-1-2-3.Rmd
+++ b/slides/Intro-1-2-3.Rmd
@@ -11,7 +11,7 @@ output:
     nature:
       highlightStyle: github
       highlightLines: true
-      countIncrementalSlides: false
+      countIncrementalSlides: TRUE
 ---
 
 
