--- a/slides/FuturesContractsandHedging-slides.Rmd
+++ b/slides/FuturesContractsandHedging-slides.Rmd
@@ -1,88 +1,310 @@
+---
+title: "Futures and Hedging Review"
+subtitle: "Price Analysis: A Fundamental Approach to the Study of Commodity Prices"  
+
+output:
+  xaringan::moon_reader:
+    lib_dir: libs
+    css: xaringan-themer.css
+    nature:
+      highlightStyle: github
+      highlightLines: true
+      countIncrementalSlides: TRUE
+---
+
+```{r setup, include=FALSE}
+options(htmltools.dir.version = FALSE)
+purduegold <- '#CEB888'
+colorscheme <- purduegold
+```
+
+```{r xaringan-themer, include=FALSE, warning=FALSE}
+library(xaringanthemer)
+style_duo_accent(
+  #base_color = purduegold,
+  primary_color = colorscheme,
+  secondary_color = "black",
+  header_font_google = google_font("Josefin Sans"),
+  text_font_google   = google_font("Montserrat", "300", "300i"),
+  code_font_google   = google_font("Fira Mono")
+)
+```
+
+
+
+---
+
 # Futures and Hedging Review
 
 **Highlights**
 
--   Review of futures contracts and how to calculate profit or loss on a trade.
--   Hedging examples from the sell side (farmer's hedge) and from the buy side (flour mill's hedge).
+-   Review of futures contracts and how to calculate profit or loss on a trade. 
+
+-   Hedging examples from the sell side (farmer's hedge) and from the buy side (flour mill's hedge). 
+
 -   Learn how basis risk impacts a hedge.
 
 **Check your Understanding**
 
--   Can you calculate the profit or loss from a trade?
+-   Can you calculate the profit or loss from a trade? 
+
 -   Can you fill out a hedging net revenue table given prices on key dates?
 
-This chapter is a review of the basics of hedging. What is its purpose? Who does it? And how do futures contracts facilitate a 'hedge'?
+---
 
-Merriam-Webster defines a 'hedge' as a means of protection or defense (as against a financial loss). Hedging in the sense of hedging with a futures contract, is exactly that a defense against a financial loss. In the present context, a hedge is the use of a derivative contract to reduce or eliminate risk in your business' profits.
+# Futures and Hedging Review
 
-Understanding who is hedging and why is very helpful to understanding price relationships and what drives them to move up or down.
++ What is its purpose? 
 
-## Futures Contract Review
++ Who does it? 
 
-A futures contract is a contract between two parties to buy and sell at an agreed to price, a specific quantity and quality of something at a specific location. In the case of CBOT corn futures, it is 5,000 bushels of U.S. number 2 yellow corn, at specific elevators along the Illinois River, Lake Michigan, or associated canals. These contracts are traded on a centralized exchange, similar to the 'stock market', and the two counter-parties do not know each other. The difference between a futures contract, and say buying a stock, is that when the trade takes place, no ownership transfer occurs. It is simply a promise to buy or sell at a specific date in the future. That is why there are many different futures contract 'months' like 'December 2017' corn futures, and 'March 2018' corn futures. Traders on futures exchanges need to post 'margin' which is just an amount of money that acts as a performance bond so that everyone has confidence that both parties can make good on the contract if it is held until the futures contract expires. As the price moves up, the seller's position is losing (because selling 'low' is 'bad' business), and some money is taken from their margin account and put into the buyer's margin account (because buying 'low' is 'good' business). This daily transfer of money from the losers to the winners is called 'marking to market', and it makes sure everyone has the financial capital required to make good on the terms of the contract.
++ And how do futures contracts facilitate a 'hedge'?
 
-Consider this example. At 10am the March corn futures contract is trading at \$4.50 per bushel. Trader A decides to buy one contract and Trader B decides to sell one contract. At 1pm both traders decide to close their position and the price has moved up to \$4.75 per bushel. Since the price went up the by \$0.25 per bushel, the longs (buyers) gain $+0.25*5000 = \$1250$ and the shorts (sellers) lose $-0.25*5000 = \$1250$.
+
+---
+class: inverse, center, middle
+
+## Understanding who is hedging and why is very helpful to understanding price relationships and what drives them to move up or down
+
+
+---
+
+# Futures Contract Review
+
++ Contract to buy or sell 
+
+  + at an agreed to price
+  
+  + a specific quantity 
+  
+  + a specific quality 
+  
+  + at a specific location 
+  
+---
+
+# Example CBOT Corn Futures
+
++ 5,000 bushels 
+
++ U.S. number 2 yellow corn 
+
++ at specific elevators along the Illinois River, Lake Michigan, or associated canals. 
+
+---
+# Futures Contract Review
+
++ These contracts are traded on a centralized exchange, similar to the 'stock market' 
+
++ Two counter-parties do not know each other. 
+
+---
+class: center, middle
+
+## The difference between a futures contract, and say buying a stock, is that when the trade takes place, no ownership transfer occurs. 
+
+---
+class: center, middle
+
+## It is simply a promise to buy or sell at a specific date in the future. 
+
+---
+class: center, middle
+
+## That is why there are many different futures contract 'months' like 'December 2022' corn futures, and 'March 2023' corn futures. 
+
+---
+# Futures Contract Review
+
++ Traders on futures exchanges need to post 'margin' 
+
+  + money that acts as a performance bond so that everyone has confidence that both parties can make good on the contract 
+  
+  + As the price moves up, the seller's position is losing (because selling 'low' is 'bad' business) 
+  
+  + money is taken from short traders' margin accounts and put into the buyers' margin accounts (because buying 'low' is 'good' business). 
+  
+  + This daily transfer of money from the losers to the winners is called 'marking to market' 
+  
+    + makes sure everyone has the financial capital required to make good on the terms of the contract.
+
+---
+# Profit/Loss Calculation Review
+
+
+Consider this example. 
+
++ At 10am the March corn futures contract is trading at **$4.50** per bushel 
+
++ Trader A decides to **buy** one contract and Trader B decides to **sell** one contract  
+
++ At 1pm both traders decide to close their position and the price has moved up to **$4.75** per bushel
+
+
+## What is the gain or loss of both the long and short side? 
+
+---
+# Profit/Loss Calculation Review
+
+Since the price went up the by $0.25 per bushel, the longs (buyers) gain 
+
++0.25\*5000 = $1250 and the shorts (sellers) lose -0.25\*5000 = $1250
 
 | Time                | Trader A                  | Trader B                  |
 |:--------------------|:--------------------------|:--------------------------|
-| 10am                | buy \$4.50                | sell \$4.50               |
-| 1pm                 | sell \$4.75               | buy \$4.75                |
-| profit per bu       | \$4.75 - \$4.50 = +\$0.25 | \$4.50 - \$4.75 = -\$0.25 |
-| profit one contract | +\$1250                   | -\$1250                   |
+| 10am                | buy $4.50                 | sell  $4.50               |
+| 1pm                 | sell  $4.75               | buy  $4.75                |
+| profit per bu       | $4.75 - $4.50 = +$0.25    |  $4.50 -  $4.75 = -$0.25  |
+| profit one contract | +$1250                    | - $1250                   |
 
-Very few contracts are held all the way to expiration when transfer of ownership would take place. The traders who originally bought, sometime before expiration will sell, eliminating their obligation in the market, or getting them to a 'flat' position. The traders who originally sold, will buy, getting them to a 'flat' position as well. The rest of the chapter will cover how exactly these futures contracts can facilitate a hedge for different types of businesses.
+---
+# Position Exit Review 
 
-### Delivery
++ Very few contracts are held all the way to expiration when transfer of ownership would take place 
 
-The CME Group grain and oilseed future are deliverable contracts, ensuring a link between the spot market and the futures market. Only a few of the futures contracts traded are actually delivered on, however. The purpose of the futures market is not to provide a mechanism for physical exchange, but rather a means for streamlined risk management in a liquid market. That said, there is always some contracts that end up being held by the long and the short side of the trade into delivery. We will discuss briefly the mechanism the CME Group grain and oilseed contracts for delivery.
++ The traders who originally bought, sometime before expiration will sell 
 
-The exchange has designated a few large commercial grain handlers and warehouses as *regular for delivery*. These grain handlers lie in one of the following territories specified in the [CME Group Rulebook](https://www.cmegroup.com/rulebook/CBOT/II/10/10.pdf)
+  + eliminates their obligation in the market, or gets them to a 'flat' position 
+  
++ The traders who originally sold, will buy, getting them to a 'flat' position as well 
+
+---
+# Delivery of Futures Contracts
+
++ The CME Group grain and oilseed future are deliverable contracts, ensuring a link between the spot market and the futures market  
+
++ Only a few of the futures contracts traded are actually delivered on, however 
+
++ The purpose of the futures market is not to provide a mechanism for physical exchange, but rather a means for streamlined risk management in a liquid market
+
+---
+class: center, middle
+
+## Exchange designates a few large commercial grain handlers and warehouses as *regular for delivery*
+
+---
+# Location of 'Regular' Grain Warehouses
+
+These grain handlers lie in one of the following territories specified in the [CME Group Rulebook](https://www.cmegroup.com/rulebook/CBOT/II/10/10.pdf)
 
 > Corn shipping certificates shall specify shipment from one of the warehouses or shipping stations currently regular for delivery and located in one of the following territories:
 >
 > A. Chicago and Burns Harbor, Indiana Switching District - When used in these Rules, the Chicago Switching District will be that area geographically defined by Tariff ICC WTL 8020-Series and that portion of the Illinois Waterway at or above river mile 304 which includes the Calumet Sag Channel and the Chicago Sanitary & Ship Canal. When used in these Rules, Burns Harbor, Indiana Switching District will be that area geographically defined by the boundaries of Burns Waterway Harbor at Burns Harbor, Indiana which is owned and operated by the Indiana Port Commission.
 >
+
+---
+# Location of 'Regular' Grain Warehouses
+
+These grain handlers lie in one of the following territories specified in the [CME Group Rulebook](https://www.cmegroup.com/rulebook/CBOT/II/10/10.pdf)
+
+> Corn shipping certificates shall specify shipment from one of the warehouses or shipping stations currently regular for delivery and located in one of the following territories:
+>
 > B. Lockport-Seneca Shipping District - When used in these Rules, the Lockport-Seneca Shipping District will be that portion of the Illinois Waterway below river mile 304 at the junction of the Calumet Sag Channel and the Chicago Sanitary & Ship Canal and above river mile 244.6 at the Marseilles Lock and Dam.
+>
+
+---
+# Location of 'Regular' Grain Warehouses
+
+These grain handlers lie in one of the following territories specified in the [CME Group Rulebook](https://www.cmegroup.com/rulebook/CBOT/II/10/10.pdf)
+
+> Corn shipping certificates shall specify shipment from one of the warehouses or shipping stations currently regular for delivery and located in one of the following territories:
 >
 > C. Ottawa-Chillicothe Shipping District - When used in these Rules, the Ottawa-Chillicothe Shipping District will be that portion of the Illinois Waterway below river mile 244.6 at the Marseilles Lock and Dam and at or above river mile 170 between Chillicothe and Peoria, IL.
 >
+
+---
+# Location of 'Regular' Grain Warehouses
+
+These grain handlers lie in one of the following territories specified in the [CME Group Rulebook](https://www.cmegroup.com/rulebook/CBOT/II/10/10.pdf)
+
+> Corn shipping certificates shall specify shipment from one of the warehouses or shipping stations currently regular for delivery and located in one of the following territories:
+>
 > D. Peoria -- Pekin Shipping District - When used in these Rules, the Peoria-Pekin Shipping District will be that portion of the Illinois Waterway below river mile 170 between Chillicothe and Peoria, IL and at or above river mile 151 at Pekin, IL.
 
-If someone with a short futures position wants to deliver on their futures contract they cannot just show up at one of these locations with 5,000 bushels of grain in trucks. The actual thing that can be delivered is referred to as a *shipping certificate* for 5,000 bushels of grain from a regular for delivery warehouse. This is a certificate giving the holder the right to demand load-out of grain that meets certain quality standards. Since the shipping certificates represent physical bushels in storage at these regular for delivery warehouses, and warehouse space is not free, holders of shipping certificates are required to pay what are called *premium charges*. Premium charges are simply fees collected by the warehouse for the space provided to store the grain. The exchange specifies that premium charges for corn and soybeans shall not exceed 0.165 cents per bushel per day, or about 4.95 cents per bushel per month. We will need to use the premium charges on shipping certificates in Chapter 5 when we introduce the concept of *Financial Full Carry*.
+---
+# Delivery Process
+
++ Shorts cannot just show up at one of these locations with 5,000 bushels of grain in trucks. 
+
++ Deliverable instrument is a **shipping certificate** for 5,000 bushels of grain from a regular for delivery warehouse 
+
+---
+# Delivery Process
+
++ **Shipping certificate** gives the holder the right to demand load-out of grain that meets certain quality standards 
+
++ Holders of shipping certificates are required to pay what are called **premium charges** 
+
+  + Fees collected by the warehouse for the space provided to store the grain. 
+  
+---
+# Delivery Process 
+
 
 Likewise, if the long party (the person who bought the futures contract) wants to take delivery, they must pay the full amount, $Futures Price X 5,000$ bushels, and must pay premium charges to the warehouse to hold the shipping certificate.
 
+---
+class: inverse, center, middle
+
+## Hedging 
+
+
+---
+class: center, middle
+
 ## Examples: Who Hedges and How Does a Futures Contract Facilitate a Hedge?
 
-### Farmer
+---
 
-Consider the corn farmer who plants her crop in April waits for it to grow and then mature through the summer and fall, then harvests it in November. If the farmer sells right after harvest in the cash market, she will very likely take her grain to a local grain elevator (similar to the one pictured below), where the elevator will purchase all she has at a price they publicly offer anyone interested in selling grain.
+### Farmer Hedge
 
-Figure 1. A Grain Elevator in Royal, IL
++ Pants her crop in April waits for it to grow and then mature through the summer and fall
++ Harvests in November. 
++ Sell at harvest in the cash market -> take grain to a local grain elevator
++ elevator will purchase all she has at a publicly posted price
 
-`<a title="Daniel Schwen, CC BY-SA 4.0 &lt;https://creativecommons.org/licenses/by-sa/4.0&gt;, via Wikimedia Commons" href="https://commons.wikimedia.org/wiki/File:Grain_elevators_in_Royal,_IL.jpg"><img width="512" alt="Grain elevators in Royal, IL" src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/01/Grain_elevators_in_Royal%2C_IL.jpg/512px-Grain_elevators_in_Royal%2C_IL.jpg"></a>`
+A Grain Elevator in Royal, IL 
+
+<a title="Daniel Schwen, CC BY-SA 4.0 &lt;https://creativecommons.org/licenses/by-sa/4.0&gt;, via Wikimedia Commons" href="https://commons.wikimedia.org/wiki/File:Grain_elevators_in_Royal,_IL.jpg"><img width="512" alt="Grain elevators in Royal, IL" src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/01/Grain_elevators_in_Royal%2C_IL.jpg/512px-Grain_elevators_in_Royal%2C_IL.jpg"></a>
 
 Source: [Daniel Schwen, CC-License](https://commons.wikimedia.org/wiki/File%3AGrain_elevators_in_Royal%2C_IL.jpg)
 
-The farmer's entire income for the year will come from the sale of this grain, and a lot can happen to the price of corn between April and November, leaving the farmer exposed to tremendous income risk. Many farmers desire the ability to reduce this income risk by entering into a contractual relationship that reduces the uncertainty in the income they receive. Currently there are several ways they can achieve this.
+---
+
+### Farmer Hedge
+
+Hedge -> Reduce Uncertainty
 
 1.  Crop Insurance. They can purchase a crop insurance policy that will pay them an indemnity if either price goes down, yield is low, or both depending on the exact specification of the contract. This activity does not directly interact with the futures market, so it does not have a large effect on price.
 
 2.  Forward Price Contract. Local grain elevators (sometimes called merchandisers) typically offer forward contracts to buy grain from farmers. Along with the cash price they post publicly on a daily basis, they will post forward 'bids'. The forward contract simply states that the farmer will deliver a certain quantity of grain to that elevator within a specific date range, usually a window of a few weeks. Upon delivery, the elevator will pay the farmer the price agreed to (the forward bid price) on the date they entered int the forward contract together. This eliminates price uncertainty for the farmer, as long as the elevator does not go bankrupt before the delivery date of the contract, they will have the forward bid price with certainty. The forward contract transfers price risk to the elevator. The elevator does not want to entertain price risk during this time either, but the elevator has a contract to buy the grain at a specific price, but the price at which they can turn around and sell it to someone else is uncertain. They will transfer the price risk to speculators in the futures market by selling futures. So farmers entering into forward contracts with local grain merchandisers ultimately results in selling of futures contracts by the grain merchandisers. We will see in an examples below how exactly selling futures eliminates price risk.
 
-3.  Futures Market. Alternatively, a farmer could go directly to the futures market themselves to sell futures contracts and reduce price uncertainty. This reduces, but not eliminates uncertainty because the farmer still faces basis risk in this case. A detailed example will help explain how this works.
+---
+## Farmer Hedge
 
-Suppose on May 1st, the farmer's local elevator is offering to buy corn for \$3.50, and the May futures contract is trading at \$3.60. Since the May futures contract is about to expire, the cash price and Futures price are not separated by much time (we have discussed briefly how prices through time along the futures forward curve provide incentives to store) and thus should not be very different because of time. However, the local elevator's price can differ from the Futures price because they are at different locations. For example, the elevator in the photo at Royal, IL is about 116 miles from the 'regular for delivery' elevators in the Calmet-Sag Chanel near Orland Park, IL. The \$0.10 difference between the May futures price and the cash price on May 1st in Royal, IL is largely due to the geographic distance between the two locations. The price distance over space is called the basis. Basis can be computed compared to any of the futures contracts, but it makes sense to consider basis compared to the futures contract that corresponds to the planned cash sale.
+3.  Futures Market. Alternatively, a farmer could go directly to the futures market themselves to sell futures contracts and reduce price uncertainty. 
+  + Farmer still faces basis risk in this case. 
+
 
 $$Basis = Cash Price - Futures Price$$
 
-Also on May 1st, the December futures contract price is \$3.75. If the farmer wants to reduce price uncertainty they will sell futures, sometimes referred to as 'selling forward' or 'selling ahead'.
+---
+## Farmer Hedge
+
++ May 1st, local elevator is offering to buy corn for $3.50, and the December futures contract price is $3.75. 
 
 **To Hedge - Take the same action in the futures market (buy or sell) that you will do in the cash market at a future date**
 
-The farmer will sell corn in the cash market in November, so to hedge she should sell (the December) futures to hedge. Consider two cases, one where the Dec futures price in November turned out to be \$4.00, and one where the Dec futures price in November turned out to be \$3.60.
+---
+## Farmer Hedge
 
-**Dec Futures Price went Up to \$4.00, Basis Unchanged**
++ Should sell (the December) futures to hedge. 
+
++ Consider two cases, one where the Dec futures price in November turned out to be $4.00  
+
++And one where the Dec futures price in November turned out to be $3.60.
+
+**Dec Futures Price went Up to $4.00, Basis Unchanged**
 
 |        Date         |              Action              | Cash Price in Royal, IL |  Dec Corn Futures Price   |     Basis     |
 |:-------------------:|:--------------------------------:|:-----------------------:|:-------------------------:|:-------------:|
@@ -186,3 +408,5 @@ The soybean crusher buys soybeans and sells soybean meal and oil. Their futures 
 Anyone who is hedging with futures -- whether they be farmers, flour mills, or commercial grain handlers -- must have a line of credit in place to meet margin calls in the event that the market is moving against their hedge. For example, the farmer sells futures as a hedge against her cash sale at a later date. If the price starts moving up, the grain she will sell in the cash market is worth more, but the futures hedge is losing money. As the short hedge is losing money, margin needs to be maintained in their hedging account. If prices move against the hedge a lot, additional money will need to be deposited to keep sufficient margin in the account. Usually, this will need to come from a lender. The lender knows it is a safe loan because prices are going up, the cash sale will cover any losses in the futures account. Without the ability to access a line of credit and maintain margin, the short hedge position will be forced to liquidate, and then the farmer will no longer be hedged.
 
 ### How Crop Revanue Insurance Has Changed Commodity Marketing and Hedging Needs
+
+
