--- a/slides/FuturesContractsandHedging-slides.Rmd
+++ b/slides/FuturesContractsandHedging-slides.Rmd
@@ -265,7 +265,7 @@ class: center, middle
 
 A Grain Elevator in Royal, IL 
 
-<a title="Daniel Schwen, CC BY-SA 4.0 &lt;https://creativecommons.org/licenses/by-sa/4.0&gt;, via Wikimedia Commons" href="https://commons.wikimedia.org/wiki/File:Grain_elevators_in_Royal,_IL.jpg"><img width="512" alt="Grain elevators in Royal, IL" src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/01/Grain_elevators_in_Royal%2C_IL.jpg/512px-Grain_elevators_in_Royal%2C_IL.jpg"></a>
+[![](assets/Grain_elevator_royal_IL.jpg)](https://commons.wikimedia.org/wiki/File:Grain_elevators_in_Royal,_IL.)
 
 Source: [Daniel Schwen, CC-License](https://commons.wikimedia.org/wiki/File%3AGrain_elevators_in_Royal%2C_IL.jpg)
 
@@ -277,26 +277,26 @@ Hedge -> Reduce Uncertainty
 
 1.  Crop Insurance. They can purchase a crop insurance policy that will pay them an indemnity if either price goes down, yield is low, or both depending on the exact specification of the contract. This activity does not directly interact with the futures market, so it does not have a large effect on price.
 
-2.  Forward Price Contract. Local grain elevators (sometimes called merchandisers) typically offer forward contracts to buy grain from farmers. Along with the cash price they post publicly on a daily basis, they will post forward 'bids'. The forward contract simply states that the farmer will deliver a certain quantity of grain to that elevator within a specific date range, usually a window of a few weeks. Upon delivery, the elevator will pay the farmer the price agreed to (the forward bid price) on the date they entered int the forward contract together. This eliminates price uncertainty for the farmer, as long as the elevator does not go bankrupt before the delivery date of the contract, they will have the forward bid price with certainty. The forward contract transfers price risk to the elevator. The elevator does not want to entertain price risk during this time either, but the elevator has a contract to buy the grain at a specific price, but the price at which they can turn around and sell it to someone else is uncertain. They will transfer the price risk to speculators in the futures market by selling futures. So farmers entering into forward contracts with local grain merchandisers ultimately results in selling of futures contracts by the grain merchandisers. We will see in an examples below how exactly selling futures eliminates price risk.
+2.  Forward Price Contract. 
 
 ---
 ## Farmer Hedge
 
 3.  Futures Market. Alternatively, a farmer could go directly to the futures market themselves to sell futures contracts and reduce price uncertainty. 
-  + Farmer still faces basis risk in this case. 
+  + Farmer still faces *basis risk* in this case. 
 
 
 $$Basis = Cash Price - Futures Price$$
 
 ---
-## Farmer Hedge
+## Example Farmer Hedge With Futures
 
 + May 1st, local elevator is offering to buy corn for $3.50, and the December futures contract price is $3.75. 
 
 **To Hedge - Take the same action in the futures market (buy or sell) that you will do in the cash market at a future date**
 
 ---
-## Farmer Hedge
+## Example Farmer Hedge With Futures
 
 + Should sell (the December) futures to hedge. 
 
@@ -306,58 +306,130 @@ $$Basis = Cash Price - Futures Price$$
 
 **Dec Futures Price went Up to $4.00, Basis Unchanged**
 
+---
+## Example Farmer Hedge With Futures
+
+
 |        Date         |              Action              | Cash Price in Royal, IL |  Dec Corn Futures Price   |     Basis     |
 |:-------------------:|:--------------------------------:|:-----------------------:|:-------------------------:|:-------------:|
-|       May 1st       |         Sell Dec Futures         |         \$3.50          |          \$3.75           | -\$0.25 (Dec) |
-|       Nov 1st       | Buy Dec Futures & Sell Cash Corn |         \$3.75          |          \$4.00           | -\$0.25 (Dec) |
-| Profit Calculation, |         Cash and Futures         |         \$3.75          | \$3.75 - \$4.00 = -\$0.25 |               |
-|                     |      Net per bushel revenue      |     \$3.75 - \$0.25     |         = \$3.50          |               |
+|       May 1st       |         Sell Dec Futures         |         $3.50           |          $3.75            | -$0.25        |
+|       Nov 1st       | Buy Dec Futures & Sell Cash Corn |                         |                           | -$0.25        |
+| Profit Calculation, |         Cash and Futures         |                         |                           |               |
+|                     |      Net per bushel revenue      |                         |                           |               |
 
-With the basis unchanged, the farmer eliminated the uncertainty over the price at which she will sell her crop. By 'selling ahead' in the futures market, the price was locked in, except for the basis. Note that in this case, the farmer would have liked to be able to sell for \$3.75 instead of \$3.50 net, but by locking in the price with futures she gave up the potential for upside. In the next example, though, we show the advantage. In the next example, prices go down between May and November, and the futures hedge protects the farmer from these deteriorating prices.
+---
+## Example Farmer Hedge With Futures
+
+
+|        Date         |              Action              | Cash Price in Royal, IL |  Dec Corn Futures Price   |     Basis     |
+|:-------------------:|:--------------------------------:|:-----------------------:|:-------------------------:|:-------------:|
+|       May 1st       |         Sell Dec Futures         |         $3.50           |          $3.75            | -$0.25        |
+|       Nov 1st       | Buy Dec Futures & Sell Cash Corn |         $3.75           |          $4.00            | -$0.25        |
+| Profit Calculation, |         Cash and Futures         |         $3.75           | $3.75 - $4.00 = -$0.25    |               |
+|                     |      Net per bushel revenue      |     $3.75 -  $0.25      |         = $3.50           |               |
+
+
+---
+## Example Farmer Hedge With Futures
 
 **Dec Futures Price went Down to \$3.60, Basis Unchanged**
 
 |        Date         |              Action              | Cash Price in Royal, IL |  Dec Corn Futures Price   |     Basis     |
 |:-------------------:|:--------------------------------:|:-----------------------:|:-------------------------:|:-------------:|
-|       May 1st       |         Sell Dec Futures         |         \$3.50          |          \$3.75           | -\$0.25 (Dec) |
-|       Nov 1st       | Buy Dec Futures & Sell Cash Corn |         \$3.35          |          \$3.60           | -\$0.25 (Dec) |
-| Profit Calculation, |         Cash and Futures         |         \$3.35          | \$3.75 - \$3.60 = +\$0.15 |               |
-|                     |      Net per bushel revenue      |     \$3.35 + \$0.15     |         = \$3.50          |               |
+|       May 1st       |         Sell Dec Futures         |         $3.50           |          $3.75            | -$0.25        |
+|       Nov 1st       | Buy Dec Futures & Sell Cash Corn |                         |                           | -$0.25        |
+| Profit Calculation, |         Cash and Futures         |                         |                           |               |
+|                     |      Net per bushel revenue      |                         |                           |               |
 
-By selling Dec futures ahead of the cash sale, price risk was reduced. It was reduced, but not eliminated because by hedging with futures there is still basis risk. The next examples show what happens when the basis is uncertain. Consider now that the futures price was unchanged in November, that is in November the Dec futures is still trading at \$3.80. Now however, consider two cases. The basis widens to -\$0.50, and the basis narrows to \$0.00.
+---
+## Example Farmer Hedge With Futures
+
+**Dec Futures Price went Down to \$3.60, Basis Unchanged**
+
+|        Date         |              Action              | Cash Price in Royal, IL |  Dec Corn Futures Price   |     Basis     |
+|:-------------------:|:--------------------------------:|:-----------------------:|:-------------------------:|:-------------:|
+|       May 1st       |         Sell Dec Futures         |         $3.50           |          $3.75            | -$0.25        |
+|       Nov 1st       | Buy Dec Futures & Sell Cash Corn |         $3.35           |          $3.60            | -$0.25        |
+| Profit Calculation, |         Cash and Futures         |         $3.35           | $3.75 - $3.60 = +$0.15    |               |
+|                     |      Net per bushel revenue      |     $3.35 + $0.15       |         = $3.50           |               |
+
+---
+## Example Farmer Hedge With Futures
+
 
 **Dec Futures Price Unchanged, Basis now -\$0.50**
 
 |        Date         |              Action              | Cash Price in Royal, IL |  Dec Corn Futures Price   |     Basis     |
 |:-------------------:|:--------------------------------:|:-----------------------:|:-------------------------:|:-------------:|
-|       May 1st       |         Sell Dec Futures         |         \$3.50          |          \$3.75           | -\$0.25 (Dec) |
-|       Nov 1st       | Buy Dec Futures & Sell Cash Corn |         \$3.25          |          \$3.75           | -\$0.50 (Dec) |
-| Profit Calculation, |         Cash and Futures         |         \$3.25          | \$3.75 - \$3.75 = +\$0.00 |               |
-|                     |      Net per bushel revenue      |     \$3.25 + \$0.00     |         = \$3.25          |               |
+|       May 1st       |         Sell Dec Futures         |         $3.50           |          $3.75            | -$0.25        |
+|       Nov 1st       | Buy Dec Futures & Sell Cash Corn |                         |                           | -$0.50        |
+| Profit Calculation, |         Cash and Futures         |                         |                           |               |
+|                     |      Net per bushel revenue      |                         |                           |               |
 
-This time, the basis widening from -\$0.25 to -\$0.50 was a loss to the farmer, even though general price levels were unchanged (Dec price unchanged). The next example shows the farmer's revenue if the basis strengthens, or narrows.
+
+---
+## Example Farmer Hedge With Futures
+
+
+**Dec Futures Price Unchanged, Basis now -\$0.50**
+
+|        Date         |              Action              | Cash Price in Royal, IL |  Dec Corn Futures Price   |     Basis     |
+|:-------------------:|:--------------------------------:|:-----------------------:|:-------------------------:|:-------------:|
+|       May 1st       |         Sell Dec Futures         |         $3.50           |          $3.75            | -$0.25        |
+|       Nov 1st       | Buy Dec Futures & Sell Cash Corn |         $3.25           |          $3.75            | -$0.50        |
+| Profit Calculation, |         Cash and Futures         |         $3.25           | $3.75 - $3.75 = +$0.00    |               |
+|                     |      Net per bushel revenue      |     $3.25 + $0.00       |         = $3.25           |               |
+
+This time, the basis widening from -$0.25 to -$0.50 was a loss to the farmer, even though general price levels were unchanged (Dec price unchanged). The next example shows the farmer's revenue if the basis strengthens, or narrows.
+
+---
+## Example Farmer Hedge With Futures
+
 
 **Dec Futures Price Unchanged, Basis now \$0.00**
 
 |        Date         |              Action              | Cash Price in Royal, IL |  Dec Corn Futures Price   |     Basis     |
 |:-------------------:|:--------------------------------:|:-----------------------:|:-------------------------:|:-------------:|
-|       May 1st       |         Sell Dec Futures         |         \$3.50          |          \$3.75           | -\$0.25 (Dec) |
-|       Nov 1st       | Buy Dec Futures & Sell Cash Corn |         \$3.75          |          \$3.75           | \$0.00 (Dec)  |
-| Profit Calculation, |         Cash and Futures         |         \$3.75          | \$3.75 - \$3.75 = +\$0.00 |               |
-|                     |      Net per bushel revenue      |     \$3.75 + \$0.00     |         = \$3.75          |               |
+|       May 1st       |         Sell Dec Futures         |         $3.50           |          $3.75            | -$0.25        |
+|       Nov 1st       | Buy Dec Futures & Sell Cash Corn |         $3.75           |          $3.75            | $0.00         |
+| Profit Calculation, |         Cash and Futures         |         $3.75           | $3.75 - $3.75 = +$0.00    |               |
+|                     |      Net per bushel revenue      |     $3.75 + $0.00      |         = $3.75            |               |
 
 The narrowing of the basis was an increase in profit to the farmer.
 
-These examples show why it is said that when a farmer hedges with futures they are 'long in the basis'. a futures hedge eliminates price uncertainty that comes from general price levels:
+---
+## Example Farmer Hedge With Futures
 
--   If prices go up, they receive an increase in the cash price they receive, but a loss on their futures position
--   If prices go down, they receive less in cash price when they sell corn in their local market, but a gain on their futures position.
 
-The futures hedge, however, does not protect against changes (good or bad) in the relative price in their local cash market and the futures price.
+**Dec Futures Price Unchanged, Basis now \$0.00**
 
-4.  Options Market. They could also use options on futures contracts to reduce downside risk, but maintain upside potential profits. Specifically, a farmer could buy a put option for a premium paid upfront. The put option makes money if the price goes down, like a short (sold) futures position, but if the price goes up, it does not lose any more than the original premium paid. Therefore, if the price goes down, she is hedged, but if the price goes up, she will enjoy increased profits.
+|        Date         |              Action              | Cash Price in Royal, IL |  Dec Corn Futures Price   |     Basis     |
+|:-------------------:|:--------------------------------:|:-----------------------:|:-------------------------:|:-------------:|
+|       May 1st       |         Sell Dec Futures         |         $3.50           |          $3.75            | -$0.25        |
+|       Nov 1st       | Buy Dec Futures & Sell Cash Corn |                         |                           | $0.00         |
+| Profit Calculation, |         Cash and Futures         |                         |                           |               |
+|                     |      Net per bushel revenue      |                         |                           |               |
 
-### Flour Mill
+The narrowing of the basis was an increase in profit to the farmer.
+
+
+
+---
+## Example Farmer Hedge With Futures
+
++ Farmer hedges with futures -> they are 'long in the basis'
+  + Futures hedge eliminates price uncertainty that comes from general price levels
+  + But not uncertainty due to spatial variations
+
+
+---
+## Farmer Hedge With Put Options
+
+Covered in the next 4 chapters
+
+---
+
+## Flour Mill
 
 A flour mill buys large quantities of grain for making into flour. They can use futures to hedge price risk by 'buying ahead' futures contracts. Remember that a futures hedge always involves making a trade in the futures contract that is the same as what you will do in the cash market. In this case, the flour mill buys grain, so their futures hedge should buy futures. Since the flour mill likely wants to process grain year round, they need to hedge price risk at multiple points in time to correspond to when they routinely purchase grain. For example, high commercial wheat flour mills can process upwards of 50,000 bushels of wheat per month. With wheat futures contracts specified for 5,000 bushels they need 10 wheat futures contracts to hedge their wheat buying for one month.
 
